# servicedetector

./: README.md  pyproject.toml
conf/: edr.json  psexec.json  software.json  vm.json  webclient.json
servicedetector/: indicators.csv  main.py
